--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur perferendis nam, non eveniet sapiente placeat nesciunt cumque odio magni, pariatur facere in maxime assumenda quia ea aut qui, ipsum dolorum?
+  </p>
 </body>
 </html>
