--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | perfil de viagens</title>
   <link rel="stylesheet" href="./styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur perferendis nam, non eveniet sapiente placeat nesciunt cumque odio magni, pariatur facere in maxime assumenda quia ea aut qui, ipsum dolorum?
-  </p>
+  
 </body>
 </html>
