feat: implement site navigation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="bg-surface-color">
+  <nav class="container">
+    <a href="#" id="logo">
+      <img src="assets/icons/Logo.svg" alt="logomarca">
+    </a>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./assets/icons/Search.svg" alt="icone de lupa">
+          </a>
+        </li>
+
+        <li><a href="#">Explorar</a></li>
+        <li><a href="#">Minhas viagens</a></li>
+        <li>
+          <a href="#">
+          <img src="./assets/images/Profile pic.png" alt="imagem de isabela torres">
+        </a>
+      </li>
+      </ul>    
+  </nav>
+  </div>
+
+  <header>
+  </header>
 </body>
 </html>
